--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             } else {
                 // Gửi tin nhắn văn bản
-                let url = `https://api.telegram.org/bot${botToken}/sendMessage`;
+                let url = `https://https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendMessage`;
                 let data = {
                     chat_id: chatId,
                     text: message
