--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script>
         function sendMessage() {
-            let botToken = "YOUR_BOT_TOKEN_HERE";
+            let botToken = "7550142487:AAH_xOHuyHr0C2nXnQmkWx-b6-f1NSDXaHo";
             let chatId = document.getElementById("chatId").value.trim();
             let message = document.getElementById("message").value.trim();
             let replyLink = document.getElementById("replyLink").value.trim();
@@ -56,7 +56,7 @@
 
             // Ưu tiên gửi file ảnh từ máy
             if (photoFile) {
-                let url = `https://api.telegram.org/bot${botToken}/sendPhoto`;
+                let url = `https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendPhoto`;
                 let formData = new FormData();
                 formData.append("chat_id", chatId);
                 formData.append("photo", photoFile);
@@ -98,10 +98,10 @@
                 };
 
                 if (isImage) {
-                    url = `https://api.telegram.org/bot${botToken}/sendPhoto`;
+                    url = `https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendPhoto`;
                     payload.photo = mediaUrl;
                 } else if (isVideo) {
-                    url = `https://api.telegram.org/bot${botToken}/sendVideo`;
+                    url = `https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendVideo`;
                     payload.video = mediaUrl;
                 } else {
                     statusElement.style.color = "red";
@@ -134,7 +134,7 @@
 
             } else {
                 // Gửi tin nhắn văn bản
-                let url = `https://https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendMessage`;
+                let url = `https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendMessage`;
                 let data = {
                     chat_id: chatId,
                     text: message
