--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gửi tin nhắn tới Telegram</title>
   <style>
     body {
@@ -111,49 +111,67 @@
         }
       }
 
-      // Ưu tiên gửi nhiều ảnh từ file
+      // Ưu tiên gửi nhiều ảnh từ file, gửi theo đợt 10 ảnh
       if (photoFiles.length > 0) {
-        const url = `https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendMediaGroup`;
-        const formData = new FormData();
-        formData.append("chat_id", chatId);
-        if (replyToMessageId) formData.append("reply_to_message_id", replyToMessageId);
+        const sendMediaGroups = async () => {
+          const batchSize = 10;
+          const allPhotos = Array.from(photoFiles);
+          const totalBatches = Math.ceil(allPhotos.length / batchSize);
+          let sentCount = 0;
 
-        const media = [];
-        for (let i = 0; i < photoFiles.length; i++) {
-          const file = photoFiles[i];
-          const attachName = `photo${i}`;
-          formData.append(attachName, file);
-          media.push({
-            type: "photo",
-            media: `attach://${attachName}`,
-            caption: i === 0 ? message : undefined  // chỉ caption cho ảnh đầu
-          });
-        }
-        formData.append("media", JSON.stringify(media));
+          for (let i = 0; i < totalBatches; i++) {
+            const batch = allPhotos.slice(i * batchSize, (i + 1) * batchSize);
+            const formData = new FormData();
+            formData.append("chat_id", chatId);
+            if (replyToMessageId && i === 0) formData.append("reply_to_message_id", replyToMessageId);
 
-        fetch(url, {
-          method: "POST",
-          body: formData
-        })
-        .then(res => res.json())
-        .then(data => {
-          if (data.ok) {
-            statusElement.style.color = "green";
-            statusElement.innerText = "✅ Đã gửi nhiều ảnh!";
-            document.getElementById("message").value = "";
-            document.getElementById("replyLink").value = "";
-            document.getElementById("photoInput").value = "";
-            document.getElementById("mediaUrl").value = "";
-          } else {
-            statusElement.style.color = "red";
-            statusElement.innerText = "❌ Lỗi khi gửi nhiều ảnh!";
+            const media = [];
+
+            for (let j = 0; j < batch.length; j++) {
+              const file = batch[j];
+              const attachName = `photo${i}_${j}`;
+              formData.append(attachName, file);
+
+              const item = {
+                type: "photo",
+                media: `attach://${attachName}`
+              };
+              if (i === 0 && j === 0 && message) item.caption = message; // chỉ caption 1 ảnh đầu
+              media.push(item);
+            }
+
+            formData.append("media", JSON.stringify(media));
+
+            try {
+              const response = await fetch(`https://winter-hall-f9b4.jayky2k9.workers.dev/bot${botToken}/sendMediaGroup`, {
+                method: "POST",
+                body: formData
+              });
+              const result = await response.json();
+
+              if (!result.ok) {
+                statusElement.style.color = "red";
+                statusElement.innerText = `❌ Lỗi khi gửi đợt ảnh ${i + 1}: ${result.description}`;
+                return;
+              }
+
+              sentCount += batch.length;
+            } catch (err) {
+              statusElement.style.color = "red";
+              statusElement.innerText = `❌ Lỗi kết nối khi gửi đợt ảnh ${i + 1}`;
+              return;
+            }
           }
-        })
-        .catch(() => {
-          statusElement.style.color = "red";
-          statusElement.innerText = "❌ Lỗi kết nối!";
-        });
 
+          statusElement.style.color = "green";
+          statusElement.innerText = `✅ Đã gửi ${sentCount} ảnh thành công!`;
+          document.getElementById("message").value = "";
+          document.getElementById("replyLink").value = "";
+          document.getElementById("photoInput").value = "";
+          document.getElementById("mediaUrl").value = "";
+        };
+
+        sendMediaGroups();
         return;
       }
 
